<resources>
    <string name="app_name">BFG</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="class_list">
        <item>Fighter</item>
        <item>Ranger</item>
        <item>Scout</item>
    </string-array>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="runButton">Start Run</string>
    <string name="trouble_toggle">Looking For Trouble</string>
    <string name="futureButton">Whats coming?</string>
    <string name="profile">Profile</string>
    <string name="defaultDistance">Distance: 0.0</string>
    <string name="defaultTime">Time: 0:0:0</string>
    <string name="monsterImage">MonsterImage</string>
    <string name="arenaBanner">Welcome to the arena</string>
    <string name="startBattle">Begin Training</string>
    <string name="endBattle">End Training</string>
    <string name="sprints">Sprints</string>
    <string name="lunges">Lunges</string>
    <string name="squats">Squats</string>
    <string name="burpees">Burpees</string>
    <string name="shadowboxing">Shadow Boxing</string>
    <string name="totalStats">Total Stats</string>
    <string name="deleteButton">Delete Character</string>
    <string name="activeButton">Set as active character</string>
    <string name="creationLabel">Character Creation</string>
    <string name="defaultCharacterName">Character Name</string>
    <string name="fighterTag">Fighter - Strength based training</string>
    <string name="rangerTag">Ranger - Balanced based training</string>
    <string name="scoutTag">Scout - Cardio based training</string>
    <string name="createCharacterButton">Create Character</string>
    <string name="userCreationLabel">User Creation</string>
    <string name="createUserButton">Create New User</string>
    <string name="startingCharacter">Starting Character</string>
    <string name="defaultUserName">User Name</string>
</resources>
